# AirSpacerModel

./: .gitignore  CMakeLists.txt  README.md
data/: airspacer.txt  airspacer_dataset.csv  create.txt  create_airspacer_dataset.txt  create_trenchfill_dataset.txt  data.csv  filling.txt  test.csv  trenchfill.txt  trenchfill_dataset.csv
include/: AdvectionCallback.hpp  CSVReader.hpp  CreateData.hpp  CreateStampFromFeatures.hpp  CubicSplineInterpolation.hpp  FeatureExtraction.hpp  GeometricAirSpacerModel.hpp  MakeTrench.hpp  SplineGridInterpolation.hpp  TrenchGeometry.hpp  TrenchParameters.hpp  Utils.hpp
include/interpolation/: SplineGridInterpolation.hpp
include/models/: GeometricAirGapModel.hpp  GeometricTrenchDepositionModel.hpp  MakeTrenchStamp.hpp
include/simulation/: AdvectionCallback.hpp  FeatureExtraction.hpp  IsPinchedOff.hpp
scripts/: geometry_reconstruction.py  plot.py
scripts/trench_features/: __init__.py  extraction.py  features.py
src/: AirSpacerEmulation.cpp  AirSpacerSimulation.cpp  CreateData.cpp  FillingRatio.cpp  GeometryReconstruction.cpp  TestSpline.cpp  TrenchFill.cpp  lvst2vtp.cpp
